--- a/LectureNotes/Lecture1.ipynb
+++ b/LectureNotes/Lecture1.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "cbfaf788-38ac-4d14-b6f6-942103d62f79",
    "metadata": {},
    "outputs": [],
@@ -70,12 +70,14 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "np.random.seed(200) ## we set seed numbers to make sure that randomly generated numbers will be the same for everyone."
+    "np.random.seed(200) ## we set seed numbers to make sure that randomly generated numbers will be the same for everyone.\n",
+    "\n",
+    "# DONE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "fd844edc-e8b7-4a90-b8ef-7b83c813278b",
    "metadata": {},
    "outputs": [
@@ -110,7 +112,9 @@
     "plt.xlabel('x')\n",
     "plt.ylabel('y')\n",
     "plt.grid()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# DONE"
    ]
   },
   {
@@ -140,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "eeec1346-c961-4ca9-b978-4a59a7d93f45",
    "metadata": {},
    "outputs": [
@@ -160,12 +164,14 @@
     "scalar_np = np.array(5)\n",
     "\n",
     "print(scalar)\n",
-    "print(scalar_np)"
+    "print(scalar_np)\n",
+    "\n",
+    "# DONE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "f639600e-873f-4237-9f88-fbfaefb3ec72",
    "metadata": {},
    "outputs": [
@@ -181,7 +187,9 @@
     "## Creating a vector in numpy\n",
     "vector = np.array([1,2,3,5,6,7])\n",
     "\n",
-    "print(vector)"
+    "print(vector)\n",
+    "\n",
+    "# DONE"
    ]
   },
   {
