--- a/LectureNotes/Lecture1.ipynb
+++ b/LectureNotes/Lecture1.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "cbfaf788-38ac-4d14-b6f6-942103d62f79",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "ac9b6840-6139-4da3-a0a0-52db64d39eab",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
     "plt.quiver(\n",
     "    0, 0, \n",
     "    v_res[0], v_res[1],\n",
-    "    angles='xy', scale_units='xy',scale=1,\n",
+    "    angles='xy', scale_units='xy',scale=1, \n",
     "    color='orange', label=r'$v_{res}$')\n",
     "## the plot of the resultant vector should point to the tip of the second vector.\n",
     "\n",
@@ -252,7 +252,9 @@
     "\n",
     "plt.legend()\n",
     "plt.grid() ## show the grid\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# DONE\n"
    ]
   },
   {
@@ -268,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a43333be-d024-4d96-883e-0088f3b32c34",
    "metadata": {},
    "outputs": [
@@ -293,7 +295,9 @@
     "plt.axhline(y=0, color='k')\n",
     "plt.axvline(x=0, color='k')\n",
     "plt.grid()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# DONE\n"
    ]
   },
   {
@@ -333,7 +337,9 @@
     "    [3,1,0],\n",
     "    [-1,0,2]\n",
     "])\n",
-    "A"
+    "A\n",
+    "\n",
+    "# DONE"
    ]
   },
   {
@@ -375,7 +381,9 @@
     "    -1*v2,\n",
     "    0.5*v3\n",
     "])\n",
-    "B"
+    "B\n",
+    "\n",
+    "# DONE\n"
    ]
   },
   {
@@ -400,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "8e93bac1-55c2-4e51-a23d-ca9debe91f3f",
    "metadata": {},
    "outputs": [],
@@ -413,12 +421,14 @@
     "B = np.array([\n",
     "    [0,1],\n",
     "    [1,0]\n",
-    "])"
+    "])\n",
+    "\n",
+    "# DONE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "81b6c1a0-5346-493d-ab4c-384b6edd97ce",
    "metadata": {},
    "outputs": [
@@ -440,12 +450,14 @@
    "source": [
     "## Addition / Subtraction\n",
     "print(f'A+B: \\n{A+B}\\n')\n",
-    "print(f'A-B: \\n{A-B}\\n')"
+    "print(f'A-B: \\n{A-B}\\n')\n",
+    "\n",
+    "# DONE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "508151ac-f4cf-468a-9121-9653b04efe4b",
    "metadata": {},
    "outputs": [
@@ -457,7 +469,7 @@
       "[[ 0  2]\n",
       " [-1  0]]\n",
       "\n",
-      "A ./ B: \n",
+      "A / B: \n",
       "[[inf  2.]\n",
       " [-1. nan]]\n",
       "\n"
@@ -467,22 +479,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_18952\\26389042.py:3: RuntimeWarning: divide by zero encountered in divide\n",
-      "  print(f'A ./ B: \\n{A/B}\\n') ## take note this is element-wise division\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_18952\\26389042.py:3: RuntimeWarning: invalid value encountered in divide\n",
-      "  print(f'A ./ B: \\n{A/B}\\n') ## take note this is element-wise division\n"
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_14744\\857595438.py:3: RuntimeWarning: divide by zero encountered in divide\n",
+      "  print(f'A / B: \\n{A/B}\\n') ## take note this is element-wise division\n",
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_14744\\857595438.py:3: RuntimeWarning: invalid value encountered in divide\n",
+      "  print(f'A / B: \\n{A/B}\\n') ## take note this is element-wise division\n"
      ]
     }
    ],
    "source": [
     "## Multiplication / Division\n",
     "print(f'A x B: \\n{A*B}\\n')\n",
-    "print(f'A ./ B: \\n{A/B}\\n') ## take note this is element-wise division"
+    "print(f'A / B: \\n{A/B}\\n') ## take note this is element-wise division\n",
+    "\n",
+    "# DONE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "id": "7768f613-fb22-431a-a500-628ed98d7c29",
    "metadata": {},
    "outputs": [
@@ -493,7 +507,7 @@
        "       [-3, -4]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,12 +519,15 @@
     "    [1,-1],\n",
     "    [2,3]\n",
     "])\n",
-    "k-A ## Broadcasting"
+    "k-A ## Broadcasting\n",
+    "\n",
+    "# DONE\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "id": "9a2b02ef-718e-423a-9e30-c2d98e20ad38",
    "metadata": {},
    "outputs": [
@@ -521,7 +538,7 @@
        "       [1.60943791, 1.60943791]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +548,11 @@
     "f = lambda x: np.exp(x)\n",
     "g = lambda x: np.log(x)\n",
     "A = 5*np.ones((2,2))\n",
-    "g(A)"
+    "g(A)\n",
+    "\n",
+    "# print(f(A))\n",
+    "\n",
+    "# DONE\n"
    ]
   },
   {
